# arcgis_scraper

./: .gitignore  Cargo.toml  README.md
src/: main.rs  metadata.rs  scraping.rs  tests.rs
