[package]
name = "arcgis_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tempfile = "3.3.0"
conv = "0.3.3"
clap = { version = "3.2.8", features = ["derive"] }
console = "0.15.0"
indicatif = "0.17.0-rc.11"
tablestream = "0.1.3"
